Wed Jun 12 14:22:13 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, gtkextra/gtkplotdata.c: Allow immediate fitting of
	  the dependent axis on function and parametric plots just as for
	  surface plots.  Fix fitting a parametric plot after zoom was
	  changed.

	* help/C/genius/xml: update documentation

Tue Jun 11 17:36:01 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/geniustests.txt: some new tests

Tue Jun 11 17:19:55 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/factoring.gel: Improve Factors so that for larger
	  numbers it uses "Factorize" rather than a slow naive
	  implementation.

	* lib/number_theory/primes.gel: minor mersenne update

Tue Jun 11 16:12:48 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add completion to "help on function"

	* help/C/genius.xml: workaround for broken help browser by adding
	  anchors to function descriptions rather than using the varlistentry
	  id (Which should work but does not).  A bug has been reported there
	  quite some time ago, but I don't think it got any attention.

Wed Apr 24 16:52:56 2013  Jiri (George) Lebl <jirka@5z.com>

	* update version number

	* update copyright strings.  Remove the "PhD"  ... the novelty wore
	  off

Wed Apr 24 16:45:17 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/parseutil.h, src/funclib.c: properly initialize
	  id.uninitialized (ironic huh? :)

	* src/graphing.c: use the proper temp directory

Wed Apr 24 15:54:44 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/Makefile.am: fix compile

	* help/C/genius.xml: fix some english issues

Wed Apr 24 15:36:52 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: more sane precision computations especially when
	  zoomed in.  Also reduce font size in case of too many digits.

Wed Apr 24 13:58:27 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: include the function list in the main xml

	* help/C/genius.xml: expand help for the root finding functions
