@@ -4,6 +4,8 @@ Changes to 1.0.17
   smaller if needed
 * Line plots and parametric plots now allow "fit dependent axis" automatically when
   z limits are unspecified.  And this is the default in the UI
+* Line plot step size is adaptive, also line plots now detect jumps and don't
+  draw a connecting line
 * Completion for "help on function" in the GUI
 * Fix FindRootBisection and FindRootMullersMethod
 * Factors is now a lot faster on very large numbers (as fast as Factorize)
