@@ -1,3 +1,8 @@
+Wed Jun 12 19:20:51 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: adaptive step size for line plots, also detect jump
+	  discontinuities
+
 Wed Jun 12 14:22:13 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c, gtkextra/gtkplotdata.c: Allow immediate fitting of
